src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Appirio_Owner__c</fullName>
        <description>Listing of available Appirio Case owners.</description>
        <label>Appirio Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Anuradha Suthar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Development Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diana Acker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gopi Padakandla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gurvinder Dhillon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hemant Paliwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jai Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff Parker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justin Riek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JW Bookwalter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jyoti Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luke Slevin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Ellis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mohit Batwada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimit Walia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rahul Chitkara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reena Acharya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryan Marquardt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appirio_Request_Type__c</fullName>
        <description>List of support request types.</description>
        <label>Appirio Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Listing of supported Diageo apps.</description>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>myView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diageo Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RecipeDB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <description>Calculates Case Age</description>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Priority_Order__c</fullName>
        <description>Where to designate case priority for comparison to other cases.</description>
        <label>Case Priority Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Release_Indicator__c</fullName>
        <description>Indicator for Development Request or Issue Resolution Case progress to meet it&apos;s Target Deployment Date</description>
        <inlineHelpText>Indicator for Development Request or Issue Resolution Case progress to meet it&apos;s Target Deployment Date</inlineHelpText>
        <label>Case Release Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Status_Comment__c</fullName>
        <description>Pertinent comment about current Case Status</description>
        <inlineHelpText>Pertinent comment about current Case Status</inlineHelpText>
        <label>Case Status Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Days_to_Resolve__c</fullName>
        <formula>ClosedDate - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_LOE__c</fullName>
        <description>Time spent by Case Owner in research, debugging, implementation work on the Case (excluding time spent in communications, clarifications from User)</description>
        <inlineHelpText>Time spent by Case Owner in research, debugging, implementation work on the Case (excluding time spent in communications, clarifications from User)</inlineHelpText>
        <label>Dev LOE</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estimated_LOE__c</fullName>
        <description>Estimated Level of Effort on a Development Request Case</description>
        <inlineHelpText>Estimated Level of Effort on a Development Request Case</inlineHelpText>
        <label>Estimated LOE</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name</description>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Response_Time_Hours__c</fullName>
        <description>Initial response time (in business hours), calculated via trigger as the time from Case creation until the first Case Email sent out from Case (ignoring the initial auto-reply).</description>
        <inlineHelpText>Initial response time (in business hours), from Case creation until the first Case Email sent out from Case (ignoring the initial auto-reply).</inlineHelpText>
        <label>Initial Response Time (Hours)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Response_Timestamp__c</fullName>
        <description>The date and time of first Case Email by Case Owner to the customer. This field is automatically populated via trigger.</description>
        <inlineHelpText>The date and time of first Case Email by Case Owner to the customer.</inlineHelpText>
        <label>Initial Response Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOE__c</fullName>
        <description>Actual Level of Effort.</description>
        <inlineHelpText>Actual Level of Effort spent on the Case</inlineHelpText>
        <label>Actual LOE</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_type__c</fullName>
        <label>Market type</label>
        <picklist>
            <picklistValues>
                <fullName>Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notify_Dev_Support_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Dev Support Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <label>Product Owner</label>
        <picklist>
            <controllingField>Application__c</controllingField>
            <picklistValues>
                <fullName>Sue Paul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christine McCord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vijay Kesavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michelle Parenti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christopher Butler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Indicator__c</fullName>
        <formula>IF(ISPICKVAL(Case_Release_Indicator__c, &quot;Green&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000002CVvG&quot;, &quot;&quot;), IF(ISPICKVAL(Case_Release_Indicator__c, &quot;Yellow&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000002CVvL&quot;, &quot;&quot;),
IF(ISPICKVAL(Case_Release_Indicator__c, &quot;Red&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000002CVvQ&quot;, &quot;&quot;), &quot;&quot;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Evaluation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Time_Hours__c</fullName>
        <description>Resolution time (in business hours), calculated via trigger as the time from Case creation until the Case Status is set to Waiting on Customer Acceptance.</description>
        <inlineHelpText>Resolution time (in business hours), from Case creation until the Case Status is set to Waiting on Customer Acceptance.</inlineHelpText>
        <label>Resolution Time (Hours)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution_Timestamp__c</fullName>
        <description>The date and time populated via trigger, when Case Status is updated to Waiting on Customer Acceptance.</description>
        <inlineHelpText>The date and time when Case Status is updated to Waiting on Customer Acceptance.</inlineHelpText>
        <label>Resolution Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slipped_Release_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if a Case misses it&apos;s previously set Target Deployment Date</description>
        <inlineHelpText>Check this field if a Case misses it&apos;s previously set Target Deployment Date</inlineHelpText>
        <label>Slipped Release Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Deployment_Date__c</fullName>
        <description>Options for Deployment Dates</description>
        <label>Target Deployment Date</label>
        <picklist>
            <picklistValues>
                <fullName>Patch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 7, 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 14, 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 21, 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 28, 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 5, 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 12, 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 19, 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 26, 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 9, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 31, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 14, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 28, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 14, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 28, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 11, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 26, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 9, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 23, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 6, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 20, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 3, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 18, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August 1, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the case submission is a Tier 1 case.</description>
        <label>Tier 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Open_Diageo_Direct_App_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Diageo Direct</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Released to Production,Closed</value>
        </filters>
        <label>All Open Diageo Direct App Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Recipe_DB_App_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>RecipeDB</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Released to Production,Closed</value>
        </filters>
        <label>All Open Recipe DB App Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_SFA_App_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>myView</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Released to Production,Closed</value>
        </filters>
        <label>All Open SFA App Cases</label>
    </listViews>
    <listViews>
        <fullName>All_POS_App_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Case_Priority_Order__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>POS</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Released to Production</value>
        </filters>
        <label>All Open POS App Cases</label>
    </listViews>
    <listViews>
        <fullName>Appirio_Cases_Created_within_14_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Application__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Appirio Support</value>
        </filters>
        <filters>
            <field>Case_Age__c</field>
            <operation>equals</operation>
            <value>1,2,3,4,5,6,7,8,9,10,11,12,13,14,15</value>
        </filters>
        <label>Appirio Cases Created within 14 Days</label>
    </listViews>
    <listViews>
        <fullName>Appirio_Cases_Created_within_7_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Application__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Appirio Support</value>
        </filters>
        <filters>
            <field>Case_Age__c</field>
            <operation>equals</operation>
            <value>1,2,3,4,5,6,7</value>
        </filters>
        <label>Appirio Cases Created within 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Appirio_Development_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Application__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>LOE__c</columns>
        <columns>Case_Priority_Order__c</columns>
        <columns>Target_Deployment_Date__c</columns>
        <columns>NAME</columns>
        <columns>Appirio_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>Appirio Support</value>
        </filters>
        <filters>
            <field>Appirio_Request_Type__c</field>
            <operation>equals</operation>
            <value>Development Request</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Appirio Development Cases</label>
    </listViews>
    <listViews>
        <fullName>Appirio_Open_Tickets</fullName>
        <columns>Application__c</columns>
        <columns>Appirio_Request_Type__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Status_Comment__c</columns>
        <columns>Case_Priority_Order__c</columns>
        <columns>Target_Deployment_Date__c</columns>
        <columns>Product_Owner__c</columns>
        <columns>Appirio_Owner__c</columns>
        <columns>LOE__c</columns>
        <columns>Estimated_LOE__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>appirio</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Appirio Open Tickets</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appirio_Support</fullName>
        <columns>Application__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>LOE__c</columns>
        <columns>CASES.CLOSED</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Appirio Support open</label>
        <queue>Appirio_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_w_o_Appirio_Owner</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>Application__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Appirio_Owner__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Appirio</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Appirio_Owner__c</field>
            <operation>equals</operation>
        </filters>
        <label>Cases w/o Appirio Owner</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>Diageo_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dev_Cases</fullName>
        <columns>CASES.PRIORITY</columns>
        <columns>Case_Priority_Order__c</columns>
        <columns>Target_Deployment_Date__c</columns>
        <columns>Case_Age__c</columns>
        <columns>LOE__c</columns>
        <columns>Estimated_LOE__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Application__c</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Appirio_Request_Type__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appirio_Request_Type__c</field>
            <operation>equals</operation>
            <value>Development Request,Issue Resolution,Other</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Released to Production,Closed</value>
        </filters>
        <label>Prioritized Appirio Dev Cases</label>
    </listViews>
    <listViews>
        <fullName>Incoming_Portal_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>Application__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Appirio_Owner__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Appirio</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Incoming Portal Cases</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>Diageo_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
</CustomObject>